updated layout for release notes

--- a/collections/_release-notes/2023-12-13-NDCs.md
+++ b/collections/_release-notes/2023-12-13-NDCs.md
@@ -1,6 +1,6 @@
 ---
 title: NDCs now correctly reflect brand vs. generic medications
-layout: releasenotes
+layout: productupdates
 date: 2023-12-13
 tags: bugfix 
 ---
