Add release notes for 1.187.0

--- a/collections/_release-notes/2025-05-22-1-187-0.md
+++ b/collections/_release-notes/2025-05-22-1-187-0.md
@@ -6,7 +6,8 @@ tags: bugfix plugins sdk api ui
 
 ### Add Supervising Provider Dropdown to Prescribe/Refill/Adjust Commands
 
-Users can add Supervising Provider to Prescribe, Refill, and Adjust commands. Supervising provider is an optional field that will add the prescriber’s default supervising provider that is configured in Settings, if one exists. SDK changes include ability to set the supervising provider using the [commands module and in a prescribe protocol recommendation](/sdk/commands/#prescribe), or react to events [PRE/POST Search on the dropdown](/sdk/events/#prescribe-command) in the UI command. 
+Users can add Supervising Provider to Prescribe, Refill, and Adjust commands. Supervising provider is an optional field that will add the prescriber’s default supervising provider that is configured in Settings, if one exists. [Read more](https://canvas-medical.help.usepylon.com/articles/5128727084-managing-medication-commands)<br><br> 
+SDK changes include ability to set the supervising provider using the [commands module and in a prescribe protocol recommendation](/sdk/commands/#prescribe) or react to events [PRE/POST Search on the dropdown](/sdk/events/#prescribe-command) in the UI command. 
 
 ### Sticky filter for Patient Timeline
 
