Add release notes for 1.187.0

--- a/collections/_release-notes/2025-05-22-1-187-0.md
+++ b/collections/_release-notes/2025-05-22-1-187-0.md
@@ -19,7 +19,7 @@ On [Imaging](https://canvas-medical.help.usepylon.com/articles/7566748234-proces
 
 ###  Allow Patient to Upload Documents via Patient Portal (Beta)
 
-Adds permissions to users to support document uploads via the patient portal. [Read more](http://localhost:3000/product-updates/patient-portal/#upload-documents)
+Adds permissions to users to support document uploads via the patient portal. [Read more about out beta program here](http://localhost:3000/product-updates/patient-portal/#upload-documents) and to learn more about managing your patient portal [read more here](https://canvas-medical.help.usepylon.com/articles/7348270931-managing-the-patient-portal#navigating-the-patient-portal-30).
 
 ### Business Line Custom Text Now Displays in Appointment Reminders
 
